working version of paginated results

--- a/index.html
+++ b/index.html
@@ -307,7 +307,8 @@
                         <div id="search-results-container"></div>
                         <br/>
                         <div>
-                            <button class="btn btn-primary" id="load-more-search-results" style="display: none">Load More</button>
+                            <button class="btn btn-primary" id="prev-25-search-results" style="display: none">Previous 25</button>
+                            <button class="btn btn-primary" id="next-25-search-results" style="display: none">Next 25</button>
                             <i id="loading-spinner" class="spinner icon-spinner icon-spin" style="display:none;"></i>
                         </div>
 
