Began adding CDC style pagination

--- a/index.html
+++ b/index.html
@@ -305,7 +305,52 @@
                         </div>
                         <div id="search-results-container"></div>
                         <br/>
-                        <div>
+                        <nav id="multiPagePaginator">
+                            <div class="mp-pagination hidden-one">
+                                <ul>
+                                    <li id="paginationPrevious" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected"><em class="icon-chevron-left"></em>
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationOne" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected">1
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationTwo" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected">2
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationThree" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected">3
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationFour" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected">4
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationFive" style="display: none;" >
+                                        <a href="#" class="tp-link-policy selected">5
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationSix" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected">6
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                    <li id="paginationNext" style="display: none;">
+                                        <a href="#" class="tp-link-policy selected"><em class="icon-chevron-right"></em>
+                                            <span class="print-only">(https://)</span>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </nav>
                             <button class="btn btn-primary" id="prev-25-search-results" style="display: none">Previous 25</button>
                             <button class="btn btn-primary" id="next-25-search-results" style="display: none">Next 25</button>
                             <i id="loading-spinner" class="spinner icon-spinner icon-spin" style="display:none;"></i>
