Added text to display count of paginated results. Used query count to update pagination algorithm.

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
                         </div>
                         <div id="search-results-container"></div>
                         <br/>
-                        <nav id="multiPagePaginator">
+                        <!--<nav id="multiPagePaginator">
                             <div class="mp-pagination hidden-one">
                                 <ul>
                                     <li id="paginationPrevious" style="display: none;">
@@ -350,11 +350,11 @@
                                     </li>
                                 </ul>
                             </div>
-                        </nav>
+                        </nav> -->
                             <button class="btn btn-primary" id="prev-25-search-results" style="display: none">Previous 25</button>
-                            <button class="btn btn-primary" id="next-25-search-results" style="display: none">Next 25</button>
+                            <button class="btn btn-primary pull-right" id="next-25-search-results" style="display: none">Next 25</button>
                             <i id="loading-spinner" class="spinner icon-spinner icon-spin" style="display:none;"></i>
-                        </div>
+                    </div>
 
                         <!-- Related Nav Area -->
                         <div class="nav-related hidden-three hidden-four">
@@ -523,7 +523,7 @@
         </div>
     </footer>	<!-- /#footer -->
     <div id="totop" class="off visible-one">TOP</div>
-</div>
+
 
 <script>page_timing.libs_start = Date.now();</script><script src="/TemplatePackage/3.0/js/libs.min.js?3.2.3.1"></script><script>page_timing.libs_end = Date.now();page_timing.core_start = Date.now();</script><script src="/TemplatePackage/3.0/js/core.min.js?3.2.3.1"></script><script>page_timing.core_end = Date.now();</script>
 <script>
