Added publication title to advanced search options

--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
                                            name="topic-heading-text" placeholder="Search for topic heading..."
                                            title="Search for topic heading..." maxlength="80" style="display: none">
 
+                                    <label for="publication-title" class="sci-clips-advanced-search screen-reader-only" style="display: none">Publication title:</label>
+                                    <input type="text" class="form-control sci-clips-search-input sci-clips-advanced-search span19" id="publication-title"
+                                           name="publication-title" placeholder="Search for publication title..."
+                                           title="Search for publication title..." maxlength="80" style="display: none">
+
                                     <div class="controls-row">
                                         <label for="publication-year-from" class="sci-clips-advanced-search screen-reader-only" style="display:none;">From year</label>
                                         <input type="number" class="sci-clips-search-input sci-clips-advanced-search span4" id="publication-year-from"
